[package]
name = "nvidia-video-codec"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "NVIDIA Video Codec bindings"
repository = "https://github.com/rust-av/nvidia-video-codec-rs"
readme = "README.md"
keywords = ["NVIDIA", "cuvid", "nvenc"]

[dependencies]
nvidia-video-codec-sys = { version = "0.1.0", path = "nvidia-video-codec-sys" }
tracing = "0.1"
flume = "0.10"
once_cell = "1"

[workspace]
members = ["nvidia-video-codec-sys"]
